2009-10-26  Sancho Lerena <slerena@artica.es>

	* spec: Added net-tools dependency (includes ping and traceroute).
	Updated release of spec.

2009-10-21  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed max_min alerts.

2009-10-21  Sancho Lerena <slerena@artica.es>

	First bug detected & fixed after RC1, whoah :/

	* lib/PandoraFMS/Core.pm: Max/Min alert logic is inverted on match check
	box/switch option in interface. Fixed in server code. This is applicable
	only on max & min alert (when used both).

2009-10-20  Sancho Lerena <slerena@artica.es>

	RC1 Release date

	* lib/Config.pm: Updated build.

	* util/pandora_server: Fixed incorrect message for SUSE daemon when stop
	the server.

2009-10-20  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/SNMPServer.pm: Save as much information as possible if
	  the trap could not be properly parsed.

	* lib/PandoraFMS/Core.pm: Changed the name of the alert name macro to
	  avoid conflicts with other macros.

2009-10-20  Sancho Lerena <slerena@artica.es>

        * tools.pm, core.pm: Float data with "," will be replace this
        character with "." and manage it properly as float.


2009-10-16  Sancho Lerena <slerena@artica.es>

	* util/pandora_server: Updated error string when service cannot startup
	(show both pandora_server.log and pandora_server.error)

2009-10-16  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DataServer.pm: Do not process disabled modules.

	* bin/pandora_server: Start logging before trying to connect to the DB.

2009-10-16  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/Core.pm: Keepalive was not working properly. Keepalive
	moduletype is now managed like a proc (0 = BAD) in get_status function.

       	* util/pandora_server: Start/Stop daemon now works and problem has been
	fixed, and I'm very happy after so many days trying to figure what the
	hell was happening here. 

2009-10-15  Sancho lerena <slernea@artica.es>
