@@ -1,3 +1,7 @@
+2009-11-01  Ramon Novoa  <rnovoa@artica.es>
+
+	* util/pandora_db.pl: Date::Manip is not used anymore.
+
 2009-10-26  Sancho Lerena <slerena@artica.es>
 
 	* spec: Added net-tools dependency (includes ping and traceroute).
